# podiceps

./: CMakeLists.txt  README.txt  dictionary_widget.cpp  dictionary_widget.h  dictionarywidget.cpp  dictionarywidget.h  input_widget.cpp  input_widget.h  main.cpp  main_window.cpp  main_window.h  mainwindow.cpp  mainwindow.h  podiceps2.pro  podiceps_application.cpp  preferences_widget.cpp  preferences_widget.h  save_dialog.cpp  save_dialog.h  savedialog.cpp  savedialog.h  table_model.cpp  table_model.h  table_widget.cpp  table_widget.h  tablemodel.cpp  tablemodel.h  word_card.cpp  word_line.cpp  word_line.h
resources/: resources.qrc
resources/license/: license_short_en.txt  license_short_ru.txt
resources/manual/: dictionary.html  general.html  preferences.html  shortcuts.html  style.css
resources/manual/ru/: dictionary.html  general.html  preferences.html  shortcuts.html
resources/themes/: theme_dark.qss
resources/translations/: podiceps_ru.ts
scripts/: strip_whitespaces.py  strip_whitespaces.sh
src/: CMakeLists.txt  about_widget.cpp  about_widget.h  action_add.cpp  action_add.h  action_base.cpp  action_base.h  action_delete.cpp  action_delete.h  action_edit.cpp  action_edit.h  action_log.cpp  action_log.h  dictionary_widget.cpp  dictionary_widget.h  file_info_widget.cpp  file_info_widget.h  find_widget.cpp  find_widget.h  header_menu.cpp  header_menu.h  input_widget.cpp  input_widget.h  main.cpp  main_window.cpp  main_window.h  manual_widget.cpp  manual_widget.h  podiceps_application.cpp  podiceps_application.h  podiceps_command_line.cpp  podiceps_command_line.h  preferences_widget.cpp  preferences_widget.h  save_dialog.cpp  save_dialog.h  settings.cpp  settings.h  statistics_widget.cpp  statistics_widget.h  (+18 more)
tests/: CMakeLists.txt  action_log_test.cpp  action_log_test.h  main_test.cpp  status_spin_box_test.cpp  status_spin_box_test.h  utests.cpp  utests.h  word_add_test.cpp  word_add_test.h  word_edit_test.cpp  word_edit_test.h  word_line_test.cpp  word_line_test.h  word_status_test.cpp  word_status_test.h
themes/: theme_dark.qss
translations/: podiceps_ru.ts
